# word-search

./: README.md  gen_words.py  input.txt  main.py  pyproject.toml  words.csv  words1.csv
